<resources>
    <string name="app_name">CarbonFootprint Challenge</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta? </string>
    <string name="registre_se_aqui">Cadastre-se aqui</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>